--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "sequelize": "^3.30.2",
     "source-map-support": "^0.4.10",
     "sqlite3": "^3.1.8"
   },
