--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,16 @@
     "email": "chentsulin@gmail.com",
     "url": "https://github.com/chentsulin"
   },
+  "scripts": {
+    "rebuild": "electron-rebuild -f -w sqlite3"
+  },
+  "devDependencies": {
+    "electron-rebuild": "^1.5.7"
+  },
   "license": "MIT",
   "dependencies": {
+    "hummus-recipe": "^1.6.9",
+    "sequelize": "^3.30.2",
+    "sqlite3": "^3.1.8"
   }
 }
