--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "browserslist": "electron 1.4",
   "build": {
-    "productName": "ElectronReact",
+    "productName": "Account",
     "appId": "org.develar.ElectronReact",
     "category": "public.app-category.tools",
     "dmg": {
@@ -165,18 +165,21 @@
     "webpack-validator": "^2.3.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "electron-debug": "^1.1.0",
     "elemental": "^0.6.1",
     "font-awesome": "^4.7.0",
     "material-ui": "^0.16.7",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-bootstrap-table": "^2.11.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-form": "^6.5.0",
     "redux-thunk": "^2.2.0",
     "sequelize": "^3.30.2",
     "source-map-support": "^0.4.10",
